# ECS

./: CMakeLists.txt  Clean.sh  MakeLibECS.sh  README.md  conanfile.txt
Include/: ECS.hpp
Sources/: components.hpp  main.cpp
Sources/Entity/: Entity.cpp  Entity.hpp
Sources/Registry/: Registry.cpp  Registry.hpp
Sources/SparseArray/: SparseArray.hpp
Sources/components/: components.hpp
Sources/iterator/: Zipper.hpp  ZipperIterator.hpp
Sources/systems/: LoggingSystem.cpp  LoggingSystem.hpp  systems.cpp  systems.hpp
example/: Makefile  components.hpp  main.cpp  systems.hpp
