project(RTYPE)
cmake_minimum_required(VERSION 3.10)
if (UNIX)
    add_definitions("-Wall -Werror -Wshadow -Wdouble-promotion -Wundef -Wconversion -Wextra -fPIC -Wnon-virtual-dtor -Wuninitialized -Wunreachable-code")
endif (UNIX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CONAN_DISABLE_CHECK_COMPILER TRUE CACHE INTERNAL "")
include (${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
conan_basic_setup(KEEP_RPATHS)
file(GLOB_RECURSE SOURCES_SOURCES ${PROJECT_SOURCE_DIR}/Sources/*.hpp ${PROJECT_SOURCE_DIR}/Sources/*.cpp)
add_executable(rtype_sources ${SOURCES_SOURCES})
target_include_directories(rtype_sources PUBLIC ${PROJECT_SOURCE_DIR}/Sources/Entity/)
target_include_directories(rtype_sources PUBLIC ${PROJECT_SOURCE_DIR}/Sources/SparseArray/)
target_include_directories(rtype_sources PUBLIC ${PROJECT_SOURCE_DIR}/Sources/Registry/)
target_include_directories(rtype_sources PUBLIC ${PROJECT_SOURCE_DIR}/Sources/)
target_include_directories(rtype_sources PUBLIC ${PROJECT_SOURCE_DIR}/Sources/components/)
target_include_directories(rtype_sources PUBLIC ${PROJECT_SOURCE_DIR}/Sources/systems)
target_link_libraries(rtype_sources ${CONAN_LIBS})
