project(ECS)
cmake_minimum_required(VERSION 3.10)
if (UNIX)
    add_definitions("-Wall -Werror -Wshadow -Wdouble-promotion -Wundef -Wconversion -Wextra -fPIC -Wnon-virtual-dtor -Wuninitialized -Wunreachable-code")
endif (UNIX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
file(GLOB_RECURSE SOURCES_FILES ${PROJECT_SOURCE_DIR}/Sources/*.hpp ${PROJECT_SOURCE_DIR}/Sources/*.cpp)
add_library(ECS STATIC ${SOURCES_FILES})
target_include_directories(ECS PUBLIC ${PROJECT_SOURCE_DIR}/Sources/Entity/)
target_include_directories(ECS PUBLIC ${PROJECT_SOURCE_DIR}/Sources/SparseArray/)
target_include_directories(ECS PUBLIC ${PROJECT_SOURCE_DIR}/Sources/Registry/)
target_include_directories(ECS PUBLIC ${PROJECT_SOURCE_DIR}/Sources/iterator/)
